--- a/css/style.css
+++ b/css/style.css
@@ -113,22 +113,115 @@ body a:hover{
 
 /*=====================END OF NAV======================*/
 
+
+.flexslider{
+	margin: 0 0 -3%;
+}
 .slider{
 	width: 100%;
-	height: 600px;
-	background: url("../img/construction.jpg");
+	min-height: 500px;
+	background: url("../img/construction.jpg") ;
 	background-position: center;
 	-webkit-background-size: cover;
 	background-size: cover;
+	position: relative;
 }
 
-.slider::after{
+.slider:before{
 	content: " ";
 	width: 100%;
-	height: 600px;
-	background: #4A4C52;
-	display: block;
-	opacity: 0.4;
+	height: 100%;
+	background: rgba(0,0,0, 0.4);
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 0;
+}
+
+.slider li {
+	display: none;
+}
+
+.slid-1 {
+    margin-top: 8%;
+    
+}
+
+.slid-1 h1{
+	color: #fff;
+	font-size: 28px;
+	margin-bottom: 3%;
+}
+
+.slid-1 p{
+	line-height: 155%;
+	font-size: 15px;
+	color: white;
+	margin-bottom: 2%;
+	font-weight: 400;
+}
+
+.btn-contact:hover{
+	background-color:#fff !important;
+	color: #000!important;
+}
+
+.slid-2 {
+    margin-top: 8%;
+   
+}
+
+.slid-2 h1{
+	color: #fff;
+	font-size: 28px;
+	margin-bottom: 3%;
+}
+
+.slid-2 p{
+	line-height: 155%;
+	font-size: 15px;
+	color: white;
+	margin-bottom: 2%;
+	font-weight: 400;
+}
+
+
+.flex-control-nav li{
+	zoom: 1.5;
+}
+
+
+.flex-control-nav{
+	width: 100% !important;
+    position: absolute !important;
+    bottom: -175px !important;
+    text-align: center !important;
+}
+
+.flex-direction-nav a {
+    text-decoration: none;
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: 71px 73px 0;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    overflow: hidden;
+    opacity: 0;
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.btn-default {
+	color: #fff !important;
+    background-color: transparent !important;
+    border-color: #ccc !important;
 }
 
 .services{
@@ -314,7 +407,7 @@ body a:hover{
 	position: absolute;
 	top: 40%;
 	z-index: 29;
-	font-size: 28px;
+	font-size: 25px;
 	font-weight: 100;
 
 }
@@ -372,7 +465,6 @@ body a:hover{
 
 .footer{
 	width: 100%;
-	height: 420px;
 	background: #4A4C52;
 	position: relative;
 	float: left;
@@ -390,6 +482,7 @@ body a:hover{
 
 .footer-container{
 	padding-top: 5%;
+	padding-bottom: 5%;
 }
 
 
@@ -404,6 +497,10 @@ body a:hover{
 	color: #9B9B9B;
 	line-height: 34px;
 	font-size: 18px;
+}
+
+.right-footer-sec{
+	text-align: center;
 }
 
 
@@ -429,13 +526,12 @@ body a:hover{
 
 .copyright{
 	width: 100%;
-	height: 70px;
 	background: #595C65;
 }
 
 .copyright h2{
 	text-align: center;
-	font-size: 18px;
+	font-size: 15px;
 	line-height: 2;
 	color: #BDBEC2;
 }
@@ -544,6 +640,7 @@ body a:hover{
 	width: 100%
 }
 
+
 .contact-form-container{
 	margin-bottom: 10%;
 	float: left;
@@ -631,7 +728,6 @@ body a:hover{
 
 .team-circle-outer{
 	margin-bottom: 13%;
-	margin-top: -5%;
 	text-align: center;
 }
 
